drum functionality implemented

--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,84 @@
 body {
   margin: 0;
+  background-color:rgb(111, 111, 111);
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+#root{
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
+.App{
+  border: 3px solid orange;
+  margin: auto;
+  padding: auto;
+  height: 400px;
+  width:  400px;
+  background-color: darkgray;
+
+  position:relative;
+}
+.logo{
+  position: absolute;
+  right: 0px;
+  border: 2px solid lime;
+  height:50px;
+  width:50px;
+}
+.buttonContainer{
+  position: absolute;
+  left:25%;
+  top: 30px;
+  border: 2px solid blue;
+  height:200px;
+  width:200px;
+
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 5px;
+}
+.drumButton{
+  width: 60px;
+  height: 60px;
+  background-color: gray;
+  font-weight: bold;
+  text-align: center;
+  display:table-cell;
+  vertical-align:middle;
+  border-radius: 10px;
+
+}
+.powerSwitch{
+  border: 2px solid purple;
+  width: 25px;
+  height: 10px;
+  position: absolute;
+  left:45%;
+  top: 250px;
+}
+.statusBar{
+  border: 2px solid snow;
+  height: 30px;
+  width: 150px;
+  position: absolute;
+  left:30%;
+  top: 280px;
+}
+.volumeBar{
+  border: 2px solid violet;
+  height: 10px;
+  width: 200px;
+  position: absolute;
+  left:25%;
+  top: 340px;
+}
+
+
