--- a/src/index.css
+++ b/src/index.css
@@ -58,11 +58,44 @@ body {
 }
 .powerSwitch{
   border: 2px solid purple;
-  width: 25px;
-  height: 10px;
+  width: 40px;
+  height: 30px;
   position: absolute;
   left:45%;
-  top: 250px;
+  top: 240px;
+}
+.powerText{
+  position: absolute;
+  padding:0;
+  margin: 0;
+  left:0px;
+  top: -5px;
+}
+.switch{
+  background-color: blue;
+  width: 20px;
+  height: 10px;
+  position: absolute;
+  padding:0;
+  margin: 0;
+  top: 0px;
+}
+.switch.on{
+  left:20px;
+}
+.switch.off{
+  left:0px;
+}
+.powerContainer{
+  border: 4px solid black;
+  background-color: black;
+  width: 40px;
+  height: 10px;
+  position: absolute;
+  padding:0;
+  margin: 0;
+  left:-4px;
+  top: 10px;
 }
 .statusBar{
   border: 2px solid snow;
